[metadata]
name = mavcom
version = 1.0.0
author = Mavscient
author_email = mavscient@xee4c.33mail.com
description = A python package that creates a simplified programming interface for controlling Mavlink-capable flight controllers
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://github.com/Mavscient/Mavcom/-/issues
    repository = https://github.com/Mavscient/Mavcom
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


dependencies = [
"pymavlink >= 2.1.0",
]

[options.packages.find]
where = src